@@ -14,9 +14,9 @@ Warning
     reflect code quality or stability.
 
 Copying
-    Copyright (C) 2009 by H.Merijn Brand
-    Copyright (C) 2004 by Jeff Zucker
-    Copyright (C) 1998 by Jochen Wiedmann
+    Copyright (C) 2009-2010 by H.Merijn Brand
+    Copyright (C) 2004-2009 by Jeff Zucker
+    Copyright (C) 1998-2004 by Jochen Wiedmann
  
     You may distribute this module under the terms of either the GNU
     General Public License or the Artistic License, as specified in
