@@ -1,5 +1,6 @@
-2009-12-02  0.27  H.Merijn Brand
+2010-02-17  0.27  H.Merijn Brand
 
+    * Upped copyright to 2010
     * Doc-fix typo in link (Detlef Pilzecker)
     * Doc-fix small typo's
 
